--- a/index.html
+++ b/index.html
@@ -40,52 +40,40 @@
   </em></p>
 </div>
 <div class="wrapper">
-  <div class="tabela">
-    <ul>
-
-    <li class="elaj">
-
-        <img  class="icon" src="img/ikonica.png" alt="">
-        <h4 class="program-ime">Program broj 1</h4>
-  
-    <div class="nevidljiv">
-        <img class="icon1" src="img/ikonica.png" alt=""><h4 class="program-ime">Program broj 1</h4>
-        <h3>Ime ovog programa</h3>
-        <p>
-          Tekst koji je neki tekst koji nije lorem ipsum nego <br>
-           ga ja kucam jer ne volim lorem ipsum zato sto je rumunski <br>
-          nego lepo ovako neki tekst pa da napisemo o cemu se radi u programu bla bla. <br>
-          <a href="#">Read more</a>
-        </p>
-    </div>
-    </li>
-
-    <li>
-      <img class="icon"  src="img/ikonica.png" alt=""><h4 class="program-ime">Program broj 1</h4>
-    </li>
-
-    <li>
-      <img  class="icon" src="img/ikonica.png" alt=""><h4 class="program-ime">Program broj 1</h4>
-    </li>
-
-    <li>
-      <img  class="icon" src="img/ikonica.png" alt=""><h4 class="program-ime">Program broj 1</h4>
-    </li>
-
-    <li>
-      <img  class="icon"  src="img/ikonica.png" alt=""><h4 class="program-ime">Program broj 1</h4>
-    </li>
-
-    <li>
-      <img class="icon" src="img/ikonica.png" alt=""><h4 class="program-ime">Program broj 1</h4>
-    </li>
-
-    <li>
-      <img class="icon" src="img/ikonica.png" alt=""><h4 class="program-ime">Program broj 1</h4>
-    </li>
-
+  <div class="tables">
+    <!-- first ul -->
+    <ul class="tables-ul">
+      <li class="program" id="test">
+        <p>neki tekst ovde bice</p>
+      </li>
+      <li class="program"></li>
+      <li class="program" ></li>
+      <li class="program" ></li>
     </ul>
+    <!-- second ul -->
+    <ul class="tables-ul" >
+      <li class="program" ></li>
+      <li class="program" ></li>
+      <li class="program" ></li>
+      <li class="program" ></li>
+    </ul>
+    <!-- third ul -->
+    <ul class="tables-ul">
+      <li class="program" ></li>
+      <li class="program" ></li>
+      <li class="program" ></li>
+      <li class="program" ></li>
+    </ul>
+    <!-- forth ul ul -->
+    <ul class="tables-ul">
+      <li class="program" ></li>
+      <li class="program" ></li>
+      <li class="program" ></li>
+      <li class="program" ></li>
+    </ul>
+    <!--end of uls -->
   </div>
+
 
 </div>
 
